Fixed admin bar overlaping header at mobile resolution

--- a/style.css
+++ b/style.css
@@ -1269,10 +1269,15 @@ a {
       .sticky-menu.no-topbar.admin-bar #masthead,
       .sticky-menu.topbar-out.admin-bar #masthead {
         top: 46px; } }
-    @media screen and (max-width: 599px) {
+    @media screen and (max-width: 600px) {
       .sticky-menu.no-topbar.admin-bar #masthead,
       .sticky-menu.topbar-out.admin-bar #masthead {
-        top: 0; } }
+        position: absolute;
+        top: auto; }
+        .sticky-menu.no-topbar.admin-bar #masthead.mobile-sticky-menu,
+        .sticky-menu.topbar-out.admin-bar #masthead.mobile-sticky-menu {
+          position: fixed;
+          top: 0; } }
   #masthead .container-inner {
     display: table;
     width: 100%; }
